--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/devdane/nodeSandpit#readme",
   "dependencies": {
     "chalk": "^2.4.1",
+    "nodemon": "^1.19.1",
     "validator": "^10.8.0",
     "yargs": "^12.0.2"
   }
